--- a/nova.css
+++ b/nova.css
@@ -11,6 +11,20 @@ h2{
     font-size: 2.5rem;
 }
 
+/* Textos */
+.text-white {
+    color: white;
+}
+.text-dark {
+    color: #2F3542;
+}
+.b {
+    font-weight: bold;
+}
+.text-center{
+    text-align: center;
+}
+
 /* Navs */
 .nav{
     display: flex;
@@ -30,6 +44,7 @@ h2{
     border: none;
 }
 /* Margins */
+.m-0{ margin: 0;}
 .m-1{ margin: 1rem;}
 .m-2{ margin: 2rem;}
 .m-3{ margin: 3rem;}
@@ -45,8 +60,19 @@ h2{
 .mb-3{ margin-bottom: 3rem;}
 .mb-4{ margin-bottom: 4rem;}
 .mb-5{ margin-bottom: 5rem;}
+.mr-1{ margin-right: 1rem;}
+.mr-2{ margin-right: 2rem;}
+.mr-3{ margin-right: 3rem;}
+.mr-4{ margin-right: 4rem;}
+.mr-5{ margin-right: 5rem;}
+.ml-1{ margin-left: 1rem;}
+.ml-2{ margin-left: 2rem;}
+.ml-3{ margin-left: 3rem;}
+.ml-4{ margin-left: 4rem;}
+.ml-5{ margin-left: 5rem;}
 
 /* Paddings */
+.p-0{ padding: 0;}
 .p-1{ padding: 1rem;}
 .p-2{ padding: 2rem;}
 .p-3{ padding: 3rem;}
@@ -57,6 +83,21 @@ h2{
 .pt-3{ padding-top: 3rem;}
 .pt-4{ padding-top: 4rem;}
 .pt-5{ padding-top: 5rem;}
+.pb-1{ padding-bottom: 1rem;}
+.pb-2{ padding-bottom: 2rem;}
+.pb-3{ padding-bottom: 3rem;}
+.pb-4{ padding-bottom: 4rem;}
+.pb-5{ padding-bottom: 5rem;}
+.pr-1{ padding-right: 1rem;}
+.pr-2{ padding-right: 2rem;}
+.pr-3{ padding-right: 3rem;}
+.pr-4{ padding-right: 4rem;}
+.pr-5{ padding-right: 5rem;}
+.pl-1{ padding-left: 1rem;}
+.pl-2{ padding-left: 2rem;}
+.pl-3{ padding-left: 3rem;}
+.pl-4{ padding-left: 4rem;}
+.pl-5{ padding-left: 5rem;}
 
 /* Gid */
 .grid-2{
@@ -71,6 +112,61 @@ h2{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
 }
+.row {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  gap: 1rem;
+}
+.col {
+  grid-column: span 1;
+}
+.col-1 {
+  grid-column: span 1;
+}
+.col-2 {
+  grid-column: span 2;
+}
+.col-3 {
+  grid-column: span 3;
+}
+.col-4 {
+  grid-column: span 4;
+}
+.col-5 {
+  grid-column: span 5;
+}
+.col-6 {
+  grid-column: span 6;
+}
+.col-7 {
+  grid-column: span 7;
+}
+.col-8 {
+  grid-column: span 8;
+}
+.col-9 {
+  grid-column: span 9;
+}
+.col-10 {
+  grid-column: span 10;
+}
+.col-11 {
+  grid-column: span 11;
+}
+.col-12 {
+  grid-column: span 12;
+}
+
+/* Flex */
+.f-row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.f-column {
+    display: flex;
+    flex-direction: column;
+}
 
 /* Gaps */
 .g-1{ gap: 1rem;}
@@ -78,6 +174,11 @@ h2{
 .g-3{ gap: 3rem;}
 .g-4{ gap: 4rem;}
 .g-5{ gap: 5rem;}
+
+/* With */
+.full-width {
+    width: -webkit-fill-available;
+}
 
 /* Background */
 .bg-gray {
@@ -95,6 +196,11 @@ h2{
     border-radius: 4px;
     border: none;
     outline: none;
+    padding: .8rem 1.5rem;
+}
+.btn-sm{
+    padding: .2rem .5rem;
+    font-size: .8rem;
 }
 .btn-lg{
     padding: 1.5rem 5rem;
@@ -107,13 +213,28 @@ h2{
 .btn-success:hover{
     background-color: #7bed9f;
 }
+.btn-primary{
+    background-color: #3742FA;
+    color: white;
+}
+.btn-primary:hover{
+    background-color: #5352ed;
+}
 
 /* Inputs */
 .input-form{
-    border: none;
+    border: 1px solid gray;
     outline: none;
     border-radius: 4px;
     padding: .3rem .5rem;
+}
+
+.input-form-lg{
+    border: 1px solid gray;
+    outline: none;
+    border-radius: 4px;
+    padding: .6rem .8rem;
+    font-size: .9rem;
 }
 
 .input-button {
@@ -142,7 +263,88 @@ h2{
     height: 5rem;
 }
 
+.container {
+    padding: 2rem 10rem;
+}
+
+.hidde {
+    display: none !important;
+}
+.of-auto{
+    overflow: auto;
+}
+@media (max-width: 1025px) {
+    .container{
+        padding: 2rem 4rem;
+    }
+    .grid-3{
+        grid-template-columns: repeat(2, 1fr);
+    }
+     .grid-4{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .col-3 {
+        grid-column: span 6;
+    }
+    .col-4 {
+        grid-column: span 6;
+    }
+    .col-5 {
+        grid-column: span 6;
+    }
+    .col-6 {
+        grid-column: span 6;
+    }
+    .col-7 {
+        grid-column: span 6;
+    }
+    .col-8 {
+        grid-column: span 6;
+    }
+    .col-9 {
+        grid-column: span 6;
+    }
+    .col-10 {
+        grid-column: span 6;
+    }
+    .col-11 {
+        grid-column: span 6;
+    }
+    .col-12 {
+        grid-column: span 6;
+    }
+}
 @media (max-width: 768px) {
+    /* Paddings */
+    .p-1{ padding: .5rem;}
+    .p-2{ padding: 1rem;}
+    .p-3{ padding: 1.2rem;}
+    .p-4{ padding: 1.4rem;}
+    .p-5{ padding: 1.6rem;}
+    .pt-1{ padding-top: .5rem;}
+    .pt-2{ padding-top: 1rem;}
+    .pt-3{ padding-top: 1.2rem;}
+    .pt-4{ padding-top: 1.4rem;}
+    .pt-5{ padding-top: 1.6rem;}
+    .pb-1{ padding-bottom: .5rem;}
+    .pb-2{ padding-bottom: 1rem;}
+    .pb-3{ padding-bottom: 1.2rem;}
+    .pb-4{ padding-bottom: 1.4rem;}
+    .pb-5{ padding-bottom: 1.6rem;}
+    .pr-1{ padding-right: .5rem;}
+    .pr-2{ padding-right: 1rem;}
+    .pr-3{ padding-right: 1.2rem;}
+    .pr-4{ padding-right: 1.4rem;}
+    .pr-5{ padding-right: 1.6rem;}
+    .pl-1{ padding-left: .5rem;}
+    .pl-2{ padding-left: 1rem;}
+    .pl-3{ padding-left: 1.2rem;}
+    .pl-4{ padding-left: 1.4rem;}
+    .pl-5{ padding-left: 1.6rem;}
+
+    .container{
+        padding: 2rem 1rem;
+    }
     .grid-2{
         grid-template-columns: repeat(1, 1fr);
     }
@@ -151,6 +353,39 @@ h2{
     }
     .grid-4{
         grid-template-columns: repeat(1, 1fr);
+    }
+    .col-2 {
+        grid-column: span 12;
+    }
+    .col-3 {
+        grid-column: span 12;
+    }
+    .col-4 {
+        grid-column: span 12;
+    }
+    .col-5 {
+        grid-column: span 12;
+    }
+    .col-6 {
+        grid-column: span 12;
+    }
+    .col-7 {
+        grid-column: span 12;
+    }
+    .col-8 {
+        grid-column: span 12;
+    }
+    .col-9 {
+        grid-column: span 12;
+    }
+    .col-10 {
+        grid-column: span 12;
+    }
+    .col-11 {
+        grid-column: span 12;
+    }
+    .col-12 {
+        grid-column: span 12;
     }
     h1 {
         font-size: 2rem;
@@ -178,8 +413,8 @@ h2{
 }
 
 @keyframes fadeUp {
-  from { opacity: 0; margin-top: 2rem; }
-  to { opacity: 1; margin-top: 0; }
+  from { opacity: 0; position: relative; top: 2rem; }
+  to { opacity: 1; position: relative; top: 0rem; }
 }
 
 .fade-up {
@@ -187,3 +422,11 @@ h2{
   animation: fadeUp 1s ease-in-out;
 }
 
+@keyframes moveUp {
+  from { position: relative; top: 0rem; }
+  to { position: relative; top: -1rem; }
+}
+
+.move-up {
+  animation: moveUp 1s ease-in-out;
+}
